--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </head>
 
 <body>
-    <section>
-        <div class="half-width-left">
+
+    <section class="top-banner">
+        <div class="half-width">
             <h1>Welcome To</h1>
-            <h1> <span class="orange">ZEON-X's</span> World</h1>
+            <h1> <span class="orange">ZEON-X's</span> World!</h1>
 
             <h3>Web Developer & Android Developer</h3>
             <p>nothing new 😁 just a stupid learner, loves farming , interested in AI . will be glad to be friends 😛.
@@ -28,8 +29,8 @@
 
         </div>
 
-        <div class="half-width-right">
-            <img src="images/my-bg.png" alt="" height="400px" width="400px">
+        <div class="half-width">
+            <img src="images/zeon-bg.png" alt="">
         </div>
     </section>
 
