--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
 
     <section class="top-banner">
         <div class="half-width">
-            <h1>Welcome To</h1>
-            <h1> <span class="orange">ZEON-X's</span> World!</h1>
+            <h1>Welcome To <br> <span class="span-orange">ZEON-X's</span> World!</h1>
 
             <h3>Web Developer & Android Developer</h3>
             <p>nothing new 😁 just a stupid learner, loves farming , interested in AI . will be glad to be friends 😛.
                 Also done a website this site is developed for a simple e-commerce shop named HomeDecorbd.shop This site
-                is still under development
+                is still under development.
             </p>
+
+
+
             <a class="link-btn" target="blank" href="https://www.linkedin.com/in/md-shefat-zeon-7b22961a3/">HIRE ME</a>
 
 
