--- a/index.html
+++ b/index.html
@@ -31,9 +31,28 @@
 
         </div>
 
-        <div class="half-width">
+        <div class="half-width first-img">
             <img src="images/zeon-bg.png" alt="">
         </div>
+    </section>
+
+    <section>
+        <div class="half-width second-img">
+            <img src="images/my-bg2.png" alt="">
+        </div>
+
+
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to
+                make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+        </div>
+
+
+
+
     </section>
 
 
