--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>zeonX Portfolio</title>
+    <title>ZEONX</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@200;400;600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
+
     <section class="top-banner">
-        <div class="half-width">
+        <div class="welcome-width">
             <h1>Welcome To <br> <span class="span-orange">ZEON-X's</span> World!</h1>
 
             <h3>Web Developer & Android Developer</h3>
-            <p>nothing new 😁 just a stupid learner, loves farming , interested in AI . will be glad to be friends 😛.
-                Also done a website this site is developed for a simple e-commerce shop named HomeDecorbd.shop This site
-                is still under development.
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work. That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development Hero.
             </p>
 
 
@@ -32,27 +34,51 @@
         </div>
 
         <div class="half-width first-img">
-            <img src="images/zeon-bg.png" alt="">
+            <img src="images/zeon-bg2-png.png" alt="">
         </div>
     </section>
 
     <section>
         <div class="half-width second-img">
-            <img src="images/my-bg2.png" alt="">
+            <img src="images/zeon-bg.png" alt="">
         </div>
 
 
-        <div class="half-width">
+        <div class="welcome-width">
             <h1>Dream Big</h1>
             <h3>Become a web developer</h3>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
                 to
                 make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+
+            <a class="link-btn" id="color-design-snd-btn" href="https://zeon-x.github.io/D-first-Portfolio/">DOWNLOAD
+                RESUME</a>
         </div>
 
 
 
 
+
+
+    </section>
+
+
+    <h1 id="ex">Experiences</h1>
+    <section class="last-section">
+        <div class="half-width card card1">
+            <h1>Full Stack Web Developer</h1>
+            <h2>2021-Present | Pro Level Developer</h2>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
+                JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+
+        <div class="half-width card card2">
+            <h1>Baby Web Developer</h1>
+            <h2>Baby Web Developer</h2>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed
+                it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
     </section>
 
 
