--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 to
                 make simple website. My goal is to build 3 websites and learn advanced topics.</p>
 
-            <a class="link-btn" id="color-design-snd-btn" href="https://zeon-x.github.io/D-first-Portfolio/">DOWNLOAD
+            <a class="link-btn" id="color-design-snd-btn" href="#">DOWNLOAD
                 RESUME</a>
         </div>
 
